Center buffs added, beginning of round object placement added