@@ -8,6 +8,7 @@ import com.example.machiner.simulation.DuelSimulationService.DuelFighterRequest;
 import com.example.machiner.simulation.DuelSimulationService.DuelSimulationRequest;
 import com.example.machiner.simulation.DuelSimulationService.ObstacleRequest;
 import com.example.machiner.simulation.classes.CombatClassRegistry;
+import com.example.machiner.simulation.classes.MageClassSpec;
 import com.example.machiner.simulation.classes.MeleeClassSpec;
 import com.example.machiner.simulation.classes.RangedClassSpec;
 import java.util.List;
@@ -20,7 +21,7 @@ class DuelSimulationServiceTest {
 
     private final JsonMapper jsonMapper = new JsonMapper();
     private final DuelSimulationService service = new DuelSimulationService(
-            new CombatClassRegistry(List.of(new MeleeClassSpec(), new RangedClassSpec())));
+            new CombatClassRegistry(List.of(new MeleeClassSpec(), new RangedClassSpec(), new MageClassSpec())));
     private final JsonNode idleBrain = brain("[]");
 
     @Test
@@ -112,6 +113,72 @@ class DuelSimulationServiceTest {
     }
 
     @Test
+    void conditionJoinsCanUseOrAndCoordinates() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(100, List.of()),
+                fighter("fighter-1", "One", 1, 100, 400, brain("""
+                        [
+                          {
+                            "priority":1,
+                            "conditions":[
+                              {
+                                "type":"expression",
+                                "left":"my.x",
+                                "comparator":"gt",
+                                "right":{"type":"number","value":500}
+                              },
+                              {
+                                "type":"expression",
+                                "join":"or",
+                                "left":"opponent.y",
+                                "comparator":"eq",
+                                "right":{"type":"number","value":400}
+                              }
+                            ],
+                            "action":"move_inward"
+                          }
+                        ]
+                        """)),
+                fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        assertThat(result.frames().getFirst().fighters().getFirst().x()).isGreaterThan(100);
+    }
+
+    @Test
+    void positionExpressionVariablesReadPlayerAndOpponentCoordinates() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(100, List.of()),
+                fighter("fighter-1", "One", 1, 100, 400, brain("""
+                        [
+                          {
+                            "priority":1,
+                            "conditions":[{
+                              "type":"expression",
+                              "left":"my.x",
+                              "comparator":"lt",
+                              "right":{"type":"number","value":150}
+                            }],
+                            "action":"move_east"
+                          },
+                          {
+                            "priority":2,
+                            "conditions":[{
+                              "type":"expression",
+                              "left":"opponent.y",
+                              "comparator":"gt",
+                              "right":{"type":"number","value":350}
+                            }],
+                            "action":"move_north"
+                          }
+                        ]
+                        """)),
+                fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        assertThat(result.frames().getFirst().fighters().getFirst().x()).isGreaterThan(100);
+        assertThat(result.frames().getFirst().fighters().getFirst().y()).isEqualTo(400.0);
+    }
+
+    @Test
     void samePriorityMoveAndDashBlocksCombineActionHeads() {
         MatchPlaybackDTO result = service.simulate(request(
                 arena(100, List.of()),
@@ -150,7 +217,7 @@ class DuelSimulationServiceTest {
                         """, """
                         [{
                           "priority":1,
-                          "conditions":[{"type":"my_hp_lt","value":101}],
+                          "conditions":[{"type":"my_hp_lt","value":126}],
                           "blocks":[{
                             "conditions":[{"type":"target_health_pack","target":"object_1"}],
                             "action":"move_inward",
@@ -185,7 +252,7 @@ class DuelSimulationServiceTest {
                         """)),
                 fighter("target", "Target", 2, 300, 400, idleBrain)));
 
-        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(87);
+        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(112);
         assertThat(result.frames().getFirst().fighters().getFirst().attackActive()).isTrue();
     }
 
@@ -239,7 +306,7 @@ class DuelSimulationServiceTest {
                         """)),
                 fighter("target", "Target", 2, 300, 400, idleBrain)));
 
-        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(100);
+        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(125);
         assertThat(result.frames().getFirst().fighters().getFirst().attackActive()).isFalse();
     }
 
@@ -252,7 +319,7 @@ class DuelSimulationServiceTest {
                         """)),
                 fighter("target", "Target", 2, 190, 400, idleBrain)));
 
-        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(50);
+        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(75);
         assertThat(result.frames().getFirst().obstacles())
                 .anyMatch(obstacle -> "grenadeExplosion".equals(obstacle.type()));
     }
@@ -270,7 +337,41 @@ class DuelSimulationServiceTest {
                 .filter(frame -> frame.obstacles().stream().anyMatch(obstacle -> "grenadeExplosion".equals(obstacle.type())))
                 .findFirst()
                 .orElseThrow();
-        assertThat(explosionFrame.fighters().get(1).hp()).isEqualTo(65);
+        assertThat(explosionFrame.fighters().get(1).hp()).isEqualTo(90);
+    }
+
+    @Test
+    void mageFireballHitsOnceAndAppliesRefreshingBurn() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(1500, List.of()),
+                fighter("mage", "Mage", 1, 100, 400, "mage", brain("""
+                        [{"conditions":[{"type":"my_fireball_ready"}],"action":"shoot_fireball"}]
+                        """)),
+                fighter("target", "Target", 2, 190, 400, idleBrain)));
+
+        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(110);
+        assertThat(result.frames().getLast().fighters().get(1).hp()).isLessThanOrEqualTo(108);
+        assertThat(result.frames().getFirst().fighters().getFirst().gunAmmo()).isEqualTo(3);
+        assertThat(result.frames().getFirst().obstacles())
+                .noneMatch(obstacle -> "fireball".equals(obstacle.type()));
+    }
+
+    @Test
+    void mageStunDamagesAndLocksTargetActionsForFifteenTicks() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(2_200, List.of()),
+                fighter("mage", "Mage", 1, 100, 400, "mage", brain("""
+                        [{"conditions":[{"type":"my_stun_ready"}],"action":"stun"}]
+                        """)),
+                fighter("target", "Target", 2, 200, 400, "melee", brain("""
+                        [{"conditions":[{"type":"always"}],"action":"move_outward"}]
+                        """))));
+
+        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(115);
+        assertThat(result.frames().getFirst().fighters().getFirst().attackActive()).isTrue();
+        double stunnedX = result.frames().getFirst().fighters().get(1).x();
+        assertThat(result.frames().get(14).fighters().get(1).x()).isEqualTo(stunnedX);
+        assertThat(result.frames().get(15).fighters().get(1).x()).isGreaterThan(stunnedX);
     }
 
     @Test
@@ -300,7 +401,7 @@ class DuelSimulationServiceTest {
                         """)),
                 fighter("target", "Target", 2, 190, 400, idleBrain)));
 
-        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(100);
+        assertThat(result.frames().getFirst().fighters().get(1).hp()).isEqualTo(125);
         assertThat(result.frames().getFirst().obstacles())
                 .noneMatch(obstacle -> "grenadeExplosion".equals(obstacle.type()));
     }
@@ -353,7 +454,21 @@ class DuelSimulationServiceTest {
                 fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
 
         assertThat(result.frames().get(9).fighters().getFirst().y()).isEqualTo(200.0);
-        assertThat(result.frames().get(10).fighters().getFirst().y()).isEqualTo(188.0);
+        assertThat(result.frames().get(10).fighters().getFirst().y()).isEqualTo(180.0);
+    }
+
+    @Test
+    void meleeDashUsesIndependentCharges() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(1200, List.of()),
+                fighter("fighter-1", "One", 1, 100, 400, brain("""
+                        [{"conditions":[{"type":"always"}],"action":"dash_north"}]
+                        """)),
+                fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        assertThat(result.frames().get(0).fighters().getFirst().y()).isEqualTo(380.0);
+        assertThat(result.frames().get(9).fighters().getFirst().y()).isEqualTo(200.0);
+        assertThat(result.frames().get(10).fighters().getFirst().y()).isEqualTo(180.0);
     }
 
     @Test
@@ -420,6 +535,109 @@ class DuelSimulationServiceTest {
 
         assertThat(Math.abs(previousXDelta - nextXDelta - 4.0)).isLessThan(0.01);
         assertThat(Math.abs(nextYDelta)).isLessThan(Math.abs(previousYDelta));
+    }
+
+    @Test
+    void buffObjectsGrantEffectsWhenKilledByLastHit() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(3_200, List.of(new ObstacleRequest("object_buff_1", "overdrive", 150.0, 400.0, 76))),
+                fighter("fighter-1", "One", 1, 100, 400, brain("""
+                        [{"priority":1,"conditions":[{"type":"always"}],"action":"swing","actionTarget":"object_buff_1"}]
+                        """)),
+                fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        assertThat(result.frames().stream().anyMatch(frame -> frame.fighters().getFirst().overdriveMs() > 0))
+                .isTrue();
+        assertThat(result.frames().getLast().obstacles())
+                .extracting(MatchPlaybackDTO.ObstaclePlacementDTO::type)
+                .doesNotContain("overdrive");
+    }
+
+    @Test
+    void generatedCenterBuffsAreEvenlySpacedAroundCenterObjective() {
+        List<MatchPlaybackDTO.ObstaclePlacementDTO> obstacles = service.createMatchObstaclePlacements(
+                123L,
+                800,
+                800,
+                List.of(
+                        fighter("fighter-1", "One", 1, 100, 400, idleBrain),
+                        fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        assertThat(obstacles).hasSize(3);
+        assertThat(obstacles).extracting(MatchPlaybackDTO.ObstaclePlacementDTO::id)
+                .doesNotContain("object_1", "object_2", "object_3");
+
+        MatchPlaybackDTO.ObstaclePlacementDTO center = obstacles.stream()
+                .filter(obstacle -> "object_center".equals(obstacle.id()))
+                .findFirst()
+                .orElseThrow();
+        MatchPlaybackDTO.ObstaclePlacementDTO left = obstacles.stream()
+                .filter(obstacle -> "object_buff_1".equals(obstacle.id()))
+                .findFirst()
+                .orElseThrow();
+        MatchPlaybackDTO.ObstaclePlacementDTO right = obstacles.stream()
+                .filter(obstacle -> "object_buff_2".equals(obstacle.id()))
+                .findFirst()
+                .orElseThrow();
+
+        assertThat(center.x() - left.x()).isEqualTo(right.x() - center.x());
+        assertThat(center.x() - left.x()).isEqualTo(200.0);
+        assertThat(left.y()).isEqualTo(center.y());
+        assertThat(right.y()).isEqualTo(center.y());
+    }
+
+    @Test
+    void radarJammerAppliesJammedAfterFiveSecondCapture() {
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(5_500, List.of(new ObstacleRequest("object_center", "radarJammer", 100.0, 400.0, 92))),
+                fighter("fighter-1", "One", 1, 100, 400, brain("""
+                        [{
+                          "priority":1,
+                          "conditions":[{
+                            "type":"expression",
+                            "left":"opponent.jammedMs",
+                            "comparator":"gt",
+                            "right":{"type":"number","value":4}
+                          }],
+                          "action":"move_east"
+                        }]
+                        """)),
+                fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        MatchPlaybackDTO.FighterPlacementDTO opponentFrame = result.frames().get(49).fighters().get(1);
+        assertThat(opponentFrame.jammedMs()).isGreaterThan(0);
+        assertThat(result.frames().get(49).obstacles())
+                .extracting(MatchPlaybackDTO.ObstaclePlacementDTO::id)
+                .doesNotContain("object_center");
+        assertThat(result.frames().getLast().fighters().getFirst().x()).isGreaterThan(100);
+    }
+
+    @Test
+    void explicitArenaKeepsAllCenterAndPlayerObjectsWithoutRandomPadding() {
+        List<ObstacleRequest> objects = List.of(
+                new ObstacleRequest("object_center", "radarJammer", 400.0, 400.0, 92),
+                new ObstacleRequest("object_buff_1", "overdrive", 200.0, 400.0, 76),
+                new ObstacleRequest("object_buff_2", "barrier", 600.0, 400.0, 76),
+                new ObstacleRequest("object_1", "healthPack", 300.0, 120.0, 42),
+                new ObstacleRequest("object_2", "projectileWall", 340.0, 200.0, 120),
+                new ObstacleRequest("object_3", "bouncyWall", 380.0, 220.0, 120),
+                new ObstacleRequest("object_4", "healthPack", 300.0, 680.0, 42),
+                new ObstacleRequest("object_5", "projectileWall", 340.0, 600.0, 120),
+                new ObstacleRequest("object_6", "bouncyWall", 380.0, 580.0, 120));
+
+        MatchPlaybackDTO result = service.simulate(request(
+                arena(0, objects),
+                fighter("fighter-1", "One", 1, 100, 400, idleBrain),
+                fighter("fighter-2", "Two", 2, 700, 400, idleBrain)));
+
+        assertThat(result.initialState().obstacles()).hasSize(9);
+        assertThat(result.initialState().obstacles())
+                .filteredOn(obstacle -> "object_6".equals(obstacle.id()))
+                .singleElement()
+                .satisfies(obstacle -> {
+                    assertThat(obstacle.x()).isEqualTo(380.0);
+                    assertThat(obstacle.y()).isEqualTo(580.0);
+                });
     }
 
     private DuelSimulationRequest request(
